Arrumando e melhorando as funções de listar, cadastrar e excluir das peças e implementos
